<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_semi_transparent"
    android:elevation="3dp">

    <ImageButton
        android:id="@+id/audio_comment_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/transparent"
        android:contentDescription="@string/play"
        android:layout_margin="12dp"
        android:src="@drawable/ic_play_arrow_white_36dp"  />

    <TextView
        android:id="@+id/audio_comment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:maxLines="2"
        android:text="@string/fill_with_audio_comment"
        android:textColor="@color/white"
        android:textSize="@dimen/text_body" />

    <ImageButton
        android:id="@+id/audio_comment_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/transparent"
        android:contentDescription="@string/delete"
        android:layout_margin="12dp"
        android:src="@drawable/ic_delete_forever_white_36dp" />

</LinearLayout>