...
    android:id="@+id/fragment_mr_root_relayout_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_semi_transparent">

    <ImageButton
        android:id="@+id/fragment_reference_audio_button"
        android:layout_width="@dimen/reference_audio_button"
        android:layout_height="@dimen/reference_audio_button"
        android:layout_gravity="center"
        android:background="@drawable/ic_play_arrow_white_36dp"
        android:contentDescription="@string/translate_revise_play_narration_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoSeekBar" />

    <SeekBar
        android:id="@+id/videoSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
...
