...
    <string name="remote_check_msg_failed">Messaging service down. Try again later.</string>

    <!-- RecordingToolbar -->
    <string name="recording_toolbar_no_recording">No recording available!</string>
    <string name="recording_toolbar_error_start_recording">Error starting recording, record again!</string>
    <string name="recording_toolbar_error_stop_recording">The recording was stopped prematurely. Nothing was recorded. Please try again.</string>
    <string name="recording_toolbar_disable_animation" translatable="false">DISABLE_ANIMATIONS_FOR_TESTING</string>

    <!-- Multiple Recording Dialog -->
    <string name="delete_audio_title">Delete Audio file?</string>
    <string name="delete_audio_message">Do you want to delete this audio file?</string>

    <!-- Export Phase -->
...
