<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="?android:attr/actionBarTheme" >

        <!-- TODO replace with back arrow or triangle -->
        <ImageButton
            android:id="@+id/exitButton"
            android:background="@drawable/ic_close_white_36dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@string/cancel" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordings_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"/>

</LinearLayout>